# CS410P_rust_web_dev

./: .env  Cargo.toml  Dockerfile  README.md  askama.toml  compose.yaml  sources
assets/templates/: body.html  header.html
frontend/: Cargo.toml  index.html  style.scss
frontend/src/: finder.rs  main.rs  question.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_create_table.rs  main.rs
migrations/: 0001_create_tables.down.sql  0001_create_tables.up.sql  0002_create_answer_tables.down.sql  0002_create_answer_tables.up.sql
src/: api.rs  config.rs  db_config.rs  main.rs  pagination.rs  question.rs  questionbank.rs  web.rs
src/controllers/: answer_controller.rs  lib.rs  mod.rs  question_controller.rs
src/delete_later/: api.rs  lib.rs  question.rs  questionbank.rs
src/entities/: answer.rs  answers.rs  lib.rs  mod.rs  prelude.rs  question.rs  question_tags.rs  questions.rs  tags.rs
src/models/: answer_model.rs  errors.rs  lib.rs  mod.rs  question_model.rs
src/repositories/: mod.rs
src/views/: questions.json
src/views/templates/: body.html  index.html
templates/: body.html  header.html  index.html
utils/: post_answers.sh
