[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
fastrand = "2.0.2"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.116"
thiserror = "1.0.58"
tower-http = { version = "0.5.2", features = ["trace", "full", "cors"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
tower = "0.4.13"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "time", "json" ] }
